# crud_cadastro_de_clientes_mercado_de_bairro

./: README.md  pyproject.toml
backend/: crud.py  database.py  models.py  router.py  schemas.py
frontend/: app.py
