[project]
name = "crud-cadastro-de-clientes-mercado-de-bairro"
version = "0.1.0"
description = ""
authors = [
    {name = "rafaelporfiriobarros",email = "rafaporfirio.barros@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "streamlit (>=1.43.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
